--- a/package.json
+++ b/package.json
@@ -16,23 +16,26 @@
   "dependencies": {
     "@nuxt/content": "^3.4.0",
     "@nuxt/eslint": "^1.3.0",
-    "@nuxt/fonts": "^0.11.0",
     "@nuxt/icon": "^1.11.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.5",
     "@nuxt/test-utils": "^3.17.2",
     "@unhead/vue": "^2.0.2",
     "eslint": "^9.23.0",
-    "nuxt": "^3.16.1",
+    "mqtt": "^5.11.0",
+    "nuxt": "latest",
+    "scss": "^0.2.4",
     "vue": "latest",
-    "vuetify": "^3.7.3"
+    "vue-router": "^4.5.0",
+    "vuetify": "latest"
   },
   "devDependencies": {
     "@mdi/font": "^7.4.47",
-    "@nuxt/fonts": "^0.10.0",
+    "@nuxt/fonts": "^0.11.1",
+    "@nuxtjs/style-resources": "^1.2.2",
     "sass-embedded": "^1.80.3",
     "typescript": "^5.6.3",
     "vue-tsc": "^2.1.6",
-    "vuetify-nuxt-module": "^0.18.3"
+    "vuetify-nuxt-module": "^0.16.1"
   }
 }
