--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@nuxt/image": "^1.10.0",
     "@nuxt/scripts": "^0.11.6",
     "@nuxt/test-utils": "^3.17.2",
+    "@nuxt/ui": "^3.0.2",
     "@unhead/vue": "^2.0.8",
     "eslint": "^9.25.0",
     "mqtt": "^5.11.0",
